--- a/index.html
+++ b/index.html
@@ -11,20 +11,13 @@
 
 <body>
   <div class="cube">
-    <div class="front"></div>
+    <div class="front">Front</div>
     <div class="back"></div>
     <div class="right"></div>
     <div class="left"></div>
     <div class="top"></div>
     <div class="bottom"></div>
-    <div class="cube2">
-      <div class="front2"></div>
-      <div class="back2"></div>
-      <div class="right2"></div>
-      <div class="left2"></div>
-      <div class="top2"></div>
-      <div class="bottom2"></div>
-    </div>
+    <div class="shadow"></div>
   </div>
   <script src="main.js"></script>
 </body>
