--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <div class="cube">
-    <div class="front">Front</div>
-    <div class="back"></div>
-    <div class="right"></div>
-    <div class="left"></div>
-    <div class="top"></div>
-    <div class="bottom"></div>
-    <div class="shadow"></div>
+  <div class="cube" id="cube">
+    <div id="piece1" class="front">Front</div>
+    <div id="piece2" class="back"></div>
+    <div id="piece3" class="right"></div>
+    <div id="piece4" class="left"></div>
+    <div id="piece5" class="top"></div>
+    <div id="piece6" class="bottom"></div>
+    <div id="piece7" class="shadow"></div>
   </div>
   <script src="main.js"></script>
 </body>
