--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <button class="btn" id="btn">Open Cube</button>
   <div class="cube" id="cube">
     <div id="piece1" class="front">Front</div>
     <div id="piece2" class="back"></div>
