--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML</title>
+  <title>HTML</title> 
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <button class="btn" id="btn">Open Cube</button>
-  <div class="cube" id="cube">
+  <div class="cube">
     <div id="piece1" class="front">Front</div>
     <div id="piece2" class="back"></div>
     <div id="piece3" class="right"></div>
